# project

./: .gitignore  README.md
cpp/CentralControlClient/: CMakeLists.txt  CMakeLists.txt.user.4c5f539  ClientBase.h  ClientRequest.h  ClientResponse.h  IClientBase.h  main.cpp
cpp/CentralControlClient/include/: ClientBase.h  ClientRequest.h  ClientResponse.h  IClientBase.h  stdafx.h
cpp/CentralControlClient/src/: ClienrtResponse.cpp  ClientBase.cpp  ClientRequest.cpp
cpp/FirstTestClient/: CMakeLists.txt  main.cpp
cpp/FirstTestClient/cmake/: central_control.cmake
cpp/FirstTestClient/include/: FirstTestClient.h  IFirstTest.h
cpp/FirstTestClient/src/: FirstTestClient.cpp
cpp/build-CentralControlClient-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CentralControlClient  CentralControlRequest.pb.h  CentralControlResponse.grpc.pb.h  CentralControlResponse.pb.h  build.ninja  cmake_install.cmake
cpp/build-CentralControlClient-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-e3b7761a5fd7abf923ef.json  index-2022-12-04T10-47-11-0415.json  target-CentralControlClient-Debug-000cb0f5a798369187ac.json  target-cp_grpc_proto_autogen-Debug-9c33075d81e574d477a8.json  target-cq_grpc_proto_autogen-Debug-aa4ffd5c09eb08e477f3.json
cpp/build-CentralControlClient-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-150212a5ee16b468f53e.json  codemodel-v2-c0a8cdf90ca20d1337b5.json  target-CentralControlClient_autogen-Debug-7ae20472758032052cc7.json  target-CentralControlClient_autogen_timestamp_deps-Debug-c0d57ccf6092fda6c136.json  target-cp_grpc_proto-Debug-b43352a78e6c5f1a5936.json  target-cp_grpc_proto_autogen_timestamp_deps-Debug-8e9aa8db21ccf78aec9c.json  target-cq_grpc_proto-Debug-ca6948046f335eae0a13.json  target-cq_grpc_proto_autogen_timestamp_deps-Debug-1cb0ac4bc2a2af9ec3f3.json
cpp/build-CentralControlClient-Desktop_Qt_5_15_2_GCC_64bit-Debug/CentralControlClient_autogen/: deps  moc_predefs.h
cpp/build-CentralControlClient-Desktop_Qt_5_15_2_GCC_64bit-Debug/cp_grpc_proto_autogen/: deps  moc_predefs.h
cpp/build-CentralControlClient-Desktop_Qt_5_15_2_GCC_64bit-Debug/cq_grpc_proto_autogen/: deps
protos/: CentralControlRequest.proto  CentralControlResponse.proto  FirstTest.proto
